# webpy

./: .gitignore  Cargo.toml  Readme.md  Trunk.toml  index.html  style.css  todo.md
assets/: 0.txt  1.txt
shared_structs/: Cargo.toml
shared_structs/src/: tasks.rs  users.rs
src/: instructions.rs  intructions.rs  lib.rs  output_terminal.rs  textinput.rs
webpy/: Cargo.toml  ace_edit.html  index.html  style.css
webpy/assets/: 0.txt  1.txt  task0.toml  task1.toml
webpy/src/: instructions.rs  lib.rs  main.rs  output_terminal.rs  textinput.rs
webpy/src/components/: mod.rs  profile_manager.rs  user_profile.rs
webpy/src/new_components/: mod.rs
webserver/: Cargo.toml
webserver/assets/: task0.toml  task1.toml  users.json
webserver/pyenv/: a1.py  a1b.py  a1c.py  load_tester.py  test_file.py  tester.py  tester_usage
webserver/src/: main.rs  tasks.rs
