[package]
name = "webpy"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
shared_structs = { path = "../shared_structs" }
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["HtmlDivElement"]}
yew = { version = "0.20.0", features = ["csr"] }
