[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.10"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
