[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["add-extension", "fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

shared_structs = { path = "../shared_structs" }
anyhow = "1.0.69"
tower = "0.4.13"
serde = { version = "1.0.152", features = ["derive"] }
